--- a/index.html
+++ b/index.html
@@ -5,30 +5,31 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Peer Feedback</title>
   <style>
-    :root{
-      --bg:#0b1220;
-      --panel:#0f172a;
-      --card:#111b33;
-      --card2:#0f1a33;
-      --muted:#9aa7bd;
-      --text:#e7eefc;
-      --border:rgba(255,255,255,.08);
-      --shadow: 0 10px 30px rgba(0,0,0,.35);
-      --primary:#5b8cff;
-      --primary2:#4777ee;
-      --danger:#ff5b7a;
-      --ok:#33d6a6;
-      --chip: rgba(255,255,255,.08);
-      --input: rgba(255,255,255,.06);
-    }
+:root{
+  --bg:#f6f8fc;
+  --panel:#ffffff;
+  --card:#ffffff;
+  --card2:#ffffff;
+  --muted:#5b667a;
+  --text:#0f172a;
+  --border:rgba(15,23,42,.10);
+  --shadow: 0 10px 30px rgba(15,23,42,.08);
+  --primary:#2f6bff;
+  --primary2:#2457d8;
+  --danger:#d92d4b;
+  --ok:#0f9d74;
+  --chip: rgba(15,23,42,.06);
+  --input: rgba(15,23,42,.04);
+}
+
 
     *{ box-sizing:border-box; }
     body{
       margin:0;
       font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Noto Sans", "Helvetica Neue", sans-serif;
-      background: radial-gradient(1200px 600px at 20% -10%, rgba(91,140,255,.25), transparent 60%),
-                  radial-gradient(800px 500px at 100% 0%, rgba(51,214,166,.18), transparent 50%),
-                  var(--bg);
+background: radial-gradient(1200px 600px at 20% -10%, rgba(47,107,255,.12), transparent 60%),
+            radial-gradient(800px 500px at 100% 0%, rgba(15,157,116,.10), transparent 50%),
+            var(--bg);
       color: var(--text);
     }
 
@@ -756,3 +757,4 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
