--- a/admin.html
+++ b/admin.html
@@ -236,14 +236,15 @@
 
   $("exitBtn").addEventListener("click", () => {
     setAdminMode(false);
-    window.location.href = "./login.html";
+    window.location.href = "./admin-login.html";
   });
 
   $("backToLoginBtn").addEventListener("click", () => {
-    window.location.href = "./login.html";
+    window.location.href = "./admin-login.html";
   });
 
   await refreshAll();
 </script>
 </body>
 </html>
+
